--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -20,6 +20,10 @@ jobs:
       - name: Downlaod and Install Trunk binary
         run: wget -qO- https://github.com/thedodd/trunk/releases/latest/download/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
       - name: Build # build
+        # using --public-url something will allow trunk to modify all the href paths like from favicon.ico to eframe_template/favicon.ico .
+        # this is necessary for github pages where the site is deployed to username.github.io/eframe_template and all files must be requested
+        # relatively as eframe_template/favicon.ico. if we skip public-url option, the href paths will instead request username.github.io/favicon.ico which
+        # will obviously return error 404 not found.
         run: ./trunk build --release --public-url eframe_template # change this name to your project name
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
